// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  rteConfig={
    Object {
      "enabled": true,
      "spoiler": false,
      "strikethrough": false,
    }
  }
  showMessageBox={false}
  siteID="site-id"
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when commenting has been disabled (collapsing) 1`] = `
<PostCommentFormClosedSitewide
  message="commenting disabled"
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
/>
`;

exports[`renders when commenting has been disabled (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  rteConfig={
    Object {
      "enabled": true,
      "spoiler": false,
      "strikethrough": false,
    }
  }
  showMessageBox={false}
  siteID="site-id"
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when story has been closed (collapsing) 1`] = `
<PostCommentFormClosed
  message="story closed"
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
/>
`;

exports[`renders when story has been closed (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="story closed"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  rteConfig={
    Object {
      "enabled": true,
      "spoiler": false,
      "strikethrough": false,
    }
  }
  showMessageBox={false}
  siteID="site-id"
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when user is scheduled to be deleted 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage={
    <Localized
      id="comments-postCommentForm-userScheduledForDeletion-warning"
    >
      Commenting is disabled when your account is scheduled for deletion.
    </Localized>
  }
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  rteConfig={
    Object {
      "enabled": true,
      "spoiler": false,
      "strikethrough": false,
    }
  }
  showMessageBox={false}
  siteID="site-id"
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  mediaConfig={
    Object {
      "external": Object {
        "enabled": false,
      },
      "giphy": Object {
        "enabled": false,
        "key": "",
        "maxRating": "",
      },
      "twitter": Object {
        "enabled": false,
      },
      "youtube": Object {
        "enabled": false,
      },
    }
  }
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  rteConfig={
    Object {
      "enabled": true,
      "spoiler": false,
      "strikethrough": false,
    }
  }
  showMessageBox={false}
  siteID="site-id"
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
        "mode": "COMMENTS",
      },
      "site": Object {
        "id": "site-id",
      },
    }
  }
  submitStatus={null}
/>
`;
